Fix modal positioning on mobile

--- a/style.css
+++ b/style.css
@@ -177,12 +177,14 @@ main {
 	.modal-overlay {
 		justify-content: center;
 		align-items: center;
+		padding: 0;
 	}
 
 	.modal-content {
 		margin-left: 0;
 		margin-top: 0;
 		max-width: 90vw;
+		margin: 20px;
 	}
 }
 
